--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,3 +1,6 @@
+filter:
+    excluded_paths: [tests/*]
+
 build:
     nodes:
         analysis:
@@ -5,9 +8,6 @@ build:
                 override: true
             tests:
                 override: [php-scrutinizer-run]
-
-filter:
-    excluded_paths: [tests/*]
 
 checks:
     php:
@@ -24,3 +24,9 @@ checks:
         fix_line_ending: true
         fix_identation_4spaces: true
         fix_doc_comments: true
+
+tools:
+    php_code_coverage: true
+    external_code_coverage:
+        timeout: 300
+        runs: 2
